objects/L2I_Penalties__c.object
<CustomObject>
    <description>Penalties is an object that is master detailed to Customer Accounts and holds details on penalties that customer incur. Today this process is manual and so this a simple solution for phase 1</description>
    <fields>
        <fullName>L2I_CLM_Contract__c</fullName>
        <label>CLM Contract Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Opportunity_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Opportunity Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.L2I_Penalties_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Penalties</relationshipLabel>
        <relationshipName>Penalties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Oracle_Transaction_Type__c</fullName>
        <label>Oracle Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connectivity Credit</fullName>
                </value>
                <value>
                    <fullName>DSS Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Penalties_Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Penalties</relationshipLabel>
        <relationshipName>Penalties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>L2I_Penalties_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFE Hardware</fullName>
                </value>
                <value>
                    <fullName>Connectivity Hardware</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Penalty_Amount__c</fullName>
        <label>Penalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Penalty_Credit_Part_Number__c</fullName>
        <label>Penalty Credit Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Penalty_End_Date__c</fullName>
        <label>Penalty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Penalty_Start_Date__c</fullName>
        <label>Penalty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Sales_Opportunity_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Opportunity Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.L2I_Penalties_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Penalties</relationshipLabel>
        <relationshipName>Penalties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_True_Up_Amount__c</fullName>
        <label>True Up Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Penalties</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEN-{00000}</displayFormat>
        <label>Penalty</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penalties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>